steps/2.calico/5.netpo/1_netpol_pod/default-deny-demo1-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: demo1
spec:
  podSelector: {}
  policyTypes:
  - Egress
